tests/negativeTests/typeMismatch1.rit
a = 1
b = "hello"
a = b
